[project]
name = "crudpy01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alchemy>=20.5",
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
]
